# dash-clientside-python

./: main.py  pyproject.toml
assets/: dashExtensions_default.js
src/: dash_clientside_python.py
